--- a/package.json
+++ b/package.json
@@ -22,18 +22,20 @@
     "@angular/router": "~7.0.0",
     "@ng-bootstrap/ng-bootstrap": "^3.3.1",
     "angular-bootstrap-datetimepicker": "^4.0.2",
-    "bootstrap": "^4.1.3",
+    "bootstrap": "^4.6.0",
     "core-js": "^2.5.4",
-    "jquery": "^3.3.1",
+    "jquery": "^3.5.1",
     "moment": "^2.26.0",
+    "ng2-ckeditor": "^1.3.3",
     "ngx-countdown": "^3.1.0",
-    "npm": "^6.14.1",
+    "npm": "^6.14.11",
     "popper.js": "^1.14.7",
     "rxjs": "^6.3.3",
+    "tslib": "^2.1.0",
     "zone.js": "~0.8.26"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.13.6",
+    "@angular-devkit/build-angular": "^0.1101.4",
     "@angular/cli": "^7.3.6",
     "@angular/compiler-cli": "^7.2.10",
     "@angular/language-service": "~7.0.0",
@@ -54,6 +56,6 @@
     "tslint": "~5.11.0",
     "typescript": "~3.1.1",
     "webpack": "^4.29.6",
-    "webpack-dev-server": "^3.2.1"
+    "webpack-dev-server": "^3.11.2"
   }
 }
